# BattleshipSDLServer

./: CMakeLists.txt  protocol_list  protocol_sample  ships_example
include/: client.h  globals.h  request.h  ship.h  types.h
src/: client.c  globals.c  main.c  request.c  ship.c
